--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <!-- Icon -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-
+  <link rel="shortcut icon" href="/assets/icon.png">
   <link rel="stylesheet" href="home.css" />
   <script src="home.js" defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <title>Avit Brian</title>
+  <title>Meet, Avit Brian</title>
 </head>
 
 <body class="home">
@@ -38,8 +38,8 @@
           <a class="fs-poppins text-black-3 bold-700" href="#section4">
             Stacks
           </a>
-          
-          
+
+
         </li>
 
         <li>
