--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p class="text-black-2 fs-200 fs-montserrat ">MUGISHA</p>
       </div>
       <div class="flex">
-        <a href="https://github.com/leudemon?tab=repositories" target="_blank">
+        <a href="https://github.com/leudemon" target="_blank">
           <button class="large-btn bg-white fs-poppins text-black-1 center">
             Github <span><img src="/assets/github.gif" alt="github" /></span>
           </button>
