--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             LinkedIn <span><img src="/assets/linkedin.gif" alt="github" /></span>
           </button>
         </a>
-        <a href="https://drive.google.com/u/0/uc?id=1p2Y9ZnNjQpnTmOpuvlnu9Dnp7P4zLtAr&export=download" target="_blank">
+        <a href="https://drive.google.com/file/d/1lXJb9BeJ4pGXr-pYJvqpXBpNqu0n9Axb/view?usp=drive_link" download="AvitBrian_cv.pdf" target="_blank">
           <button class="large-btn bg-white fs-poppins text-black-1 center">
             My CV<span><img src="/assets/download.gif" alt="github" /></span>
           </button>
